--- a/client/src/components/Game/children/Popup/Popup.module.scss
+++ b/client/src/components/Game/children/Popup/Popup.module.scss
@@ -7,7 +7,7 @@
 	padding-top: 100px;
 	padding-bottom: 100px;
 
-	overflow: auto;
+	overflow-y: hidden;
 
 	position: absolute;
 
