--- a/client/src/components/Game/children/PostGame/PostGame.module.scss
+++ b/client/src/components/Game/children/PostGame/PostGame.module.scss
@@ -2,13 +2,16 @@
 @import "../../../../styles/mixins";
 
 .content {
-	@include flex-center;
+	display: flex;
+	flex-direction: column;
 	gap: 10px;
-	width: 80%;
-	height: 500px;
 
-	position: relative;
-	top: 50%;
+	width: 80%;
+	max-height: 70dvh;
+	overflow-y: auto;
+
+	position: fixed;
+	top: 40%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 
@@ -17,4 +20,17 @@
 	background: $color-bg;
 
 	margin-top: 50px;
+
+	h2 {
+		text-align: center;
+	}
+
+	span {
+		text-align: center;
+	}
+
+	.guesses {
+		width: 100%;
+		@include flex-center;
+	}
 }
