--- a/client/src/components/Game/children/SpellInfo/SpellInfo.module.scss
+++ b/client/src/components/Game/children/SpellInfo/SpellInfo.module.scss
@@ -2,7 +2,7 @@
 @import "../../../../styles/mixins";
 
 .root {
-	width: 80%;
+	width: 90%;
 	height: fit-content;
 	//border: $border;
 	display: flex;
